--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
         <section>
 
-            <ul id="booksList">
+            <ul id="booksList" class="no-bullets">
     
             </ul>
 
